fixes homepage > .navbar-collapse double trigger issue

--- a/app/less/homepage.less
+++ b/app/less/homepage.less
@@ -49,10 +49,17 @@
 
       // @borderColor : lighten(hsl(200,100%,100%), 20%);
       @borderColor : darken(@white, 70%);
+      @activeNavState : lighten(@mainnav, 15%);
 
-      .dropdown{ background: @mainnav;}
-      .dropdown-menu a:hover{
-        color: @white;
+      .dropdown{ background: @mainnav; }
+
+      .dropdown-menu {
+        li {
+          margin-left:0;
+        }
+        a:hover{
+          color: @white;
+        }
       }
       .nav.navbar-nav > .dropdown{
           margin: 0 0.5em 0 0.5em;
@@ -77,22 +84,24 @@
             color:@white;
       }
       &.navbar-inverse .navbar-nav>.open{
-            // background: @mainnav;
-            /* Portrait */
-            a { color: @mainnav;}
+
+            background: @mainnav;
+            a { color: @mainnav; }
 
             // Smartphones (portrait and landscape) -----------
             @media only screen
             and (min-width : 320px)
             and (max-width : 768px) {
+                // background: inherit;
+                background: @wetasphalt;
                 text-align: right;
                 padding-right: 10%;
-                a { color: @white;};
+                a { color: @white; }
             }
 
             & b.caret{
                 color:@white;
-                .rotate(180deg);
+                .rotate(90deg);
                 // .animate(0.25s);
             }
       }
@@ -106,7 +115,7 @@
             padding: 1em;
             // margin: 0;
             &:hover{
-                background:@peterriver;
+                background:@activeNavState;
             }
             // Smartphones (portrait and landscape) -----------
             @media only screen
@@ -124,7 +133,7 @@
             background: @mainnav;
             .animate(0.1);
             &:hover{
-                background:@peterriver;
+                background:@activeNavState;
 
             }
             // Smartphones (portrait and landscape) -----------
